tests/invalids/funcExtraComma.gt
proc f (ref int m, )
    int m;
begin 
    m := n;
end

proc main ()
begin 
    read m;
end
